# editor

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
api/: .gitignore  Cargo.toml  Dockerfile  bindgen.nu  bindgen.sh  fly.toml
api/.sqlx/: query-0c7883472e4f45c0f720da1ec26901bcc9374be20b3700f4bb2454d964e7b1ea.json  query-0f5774bd7e9662d2ffc77749f089b7f0a2574d9a4cc06c84ea181f2d46284e0e.json  query-117e65c40f031ab54fab0788bd67e3526d4eb38d6320a815f0e4cf06274c5e90.json  query-1455b13632f07c100b3e1493d550af26c4e555c5e3032f05ff4ae704253226ac.json  query-18e4e6c8193e9dbaec8a6b600a34c83c2fcad0410cd9913ba80afb9dc10d5055.json  query-2f33fec74c901cc968ca80e3d4176e4a2a024d2b30045242fc67d6c4050ef729.json  query-3393aa4a9edd88e1fd7e9e995843003c77f3d617f0318c0cac8b0525324dfff5.json  query-39912b5264dd86a21cb525cfb5c721ba91a723358d1fb074d89db8a78406f97c.json  query-3afdb2e07ee0110afbde65f6222da59b5c464ab9ed2d6fe4480dc5cbfde14fad.json  query-4117e60854951cbbede8f68bc81f0d78ff98ac4d175fe1bfedfb9c6354bbb148.json  query-45bc9258ca53c80c3cad191ba61d13e82af2afc15497d7278dbd8f51d8c19c63.json  query-460657e3e6ac26cbe21f969dfde7395f51e438b5bfd780245225243daad6cec0.json  query-46d2922f730a8456f44d9e40104d873b98da25ec97f55be3e1131432d5c2044e.json  query-6883d405709a8f630755d9bd668e48828990cfc3c9242eafb29265cddb0a647d.json  query-6e2c8861b0efe73973dbbaf4c806351ab9f977e361582724b90fe235eba6b9de.json  query-7d17de7a894d8ae14d657af5c8660a2dcad95063488525811829ea83d2d5a82d.json  query-943d15fbb0c73361739e0d3a9047a7467884275f82e155b07a36884ded0f12bf.json  query-95694e736d794abc930a83c8600714cc99538d8d0044cccbd7e8d3f6fdd48d65.json  query-9eb5934d113a69661fbf9d966dd76f36876ca395d460073a9d8b8d0963eb4f88.json  query-9f2cd85ef7a75c278b27b6319b20a454f1ce05a95093f02b32afa1cb4f45651b.json  query-a11be0bbdf9d94d414114e7e47bed6e2f246a80639411a1c0c91b585342f0f84.json  query-a1679c43d60239c078ec7814c6f70bbc94d774d8d3a8752ae97ba2e4532ffb3c.json  query-a19f7b29237f3657f007b20171ca02bb48f0c2909c294d030059a74416c9c117.json  query-a323d26a0d72792105ecd57ac2431e878db1cfbf3c59b3411a0b6780fe945f8a.json  query-a5637677c7df40565b007b299fcd7d77270d5f8b11520c99009bd5258335a75c.json  query-a8a4d0cf89fe7cbab04df814635612317db1c515812880f96c5a97d0d3cb615c.json  query-a90d9b49d200ee44d8a8797e9a6b016da538fd95c2d41c387bac9faf497f607e.json  query-a934020bd59e28761f2f5408bb55517919211e95c7060d0eda3e7a3dba5bfcc0.json  query-a9e43161fc96e4d72a305efc1812a073b01b61277a98d89d07fbe3a5eda299ff.json  query-aa2fa6b8045e58eda3add593dd79c05c91f417fe4170469ffee6ee866d653626.json  query-aca17d64de7d8b646f834be474e4215947d379c16bf5c295cf9c14e4cf7f9bb0.json  query-af537d5f2583b9ac1f724b4c6da0d46ae751535be5a9a8fff5f482b928fcd301.json  query-b2362e0be6dc693952580ab3ea998d39f272c3577e8472b1fd8adafa8d3ca2d6.json  query-b305a2e99f85289dde43becccdc6c61bfbc4c16cd99bbb8035504a60b21a7cb2.json  query-b6b47ec5c72fdc0b2f0dabf05ca22cdda7d8cbd3c018e035eb7a73a273afb9ba.json  query-be149c51bc1805485a2b2b05afc741eea5a741af34cf251c41909fef1b521e4d.json  query-c46e5f1146deb8f890965a883c79cbf44786e3e6838d2288a2fe1ccecee8894c.json  query-d6a3254560a7fb4b23b961b30e2d86f4efccd2e53c098acaf9c166311bbad173.json  query-efb9775872227b62642ac7f475314db7bc861cb98f5aa4cc1e7bfb2bc71aa0aa.json  query-f6141786b5acffcd5687255b3e3f82d2b2309e09e91911867f22183a924e547b.json
api/bindings/: Address.ts  CurrentWeather.ts  Document.ts  LocationResponse.ts  NewDocument.ts  NewPicture.ts  NewWeather.ts  PartialDocument.ts  Picture.ts  UpdateDocument.ts  Weather.ts  index.ts
api/migrations/: 20241104225238_schema.sql  20241113064442_picture.sql  20241114070825_weather.sql  20241114083402_schema.sql  20250215074952_schema.sql  20250302014105_photo.sql  20251112143000_transactions.sql
api/src/: clerk.rs  (+8 more)
backend/: Cargo.toml
(+136 files in other folders)
