[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = { version = "0.7.7", features = ["macros", "multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
chronos = "0.0.0"
clerk-rs = { version = "0.4.0", features = ["axum"] }
dotenv = "0.15.0"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = {version = "0.8.2", features = ["runtime-tokio", "tls-rustls-ring", "postgres","uuid","chrono","derive"]}
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ts-rs = { version = "10.0.0", features = ["uuid-impl", "chrono-impl"] }
utapi-rs = "0.1.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
