[package]
name = "api"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
env = "infisical export --path=/editor_api > .env"

[dependencies]
anyhow = "1.0.92"
aws-config = "1.5.10"
aws-sdk-s3 = "1.61.0"
axum = { version = "0.7.7", features = ["macros", "multipart", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
clerk-rs = { version = "0.4.0", features = ["axum"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = [
  "rustls-tls",
  "json",
], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "postgres",
  "uuid",
  "chrono",
  "derive",
] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ts-rs = { version = "10.0.0", features = ["uuid-impl", "chrono-impl"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

