[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = "0.7.7"
clerk-rs = "0.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = {version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.11.0"
